fixed desktop active nav layout shift

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -117,6 +117,10 @@ nav {
 		display: none;
 	}
 
+	.nav__active {
+		position: relative;
+	}
+
 	.nav-menu {
 		position: static;
 		width: auto;
